--- a/src/Document/styles/Sidebar.css
+++ b/src/Document/styles/Sidebar.css
@@ -12,3 +12,32 @@
     width: 15%;
     background-color: lightgray;
   }
+
+  .sidebar h2 {
+  color: #333;
+  font-size: 1.5rem;
+  margin: 0 0 1rem 1rem;
+}
+
+.sidebar ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar li {
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar li a {
+  color: #333;
+  display: block;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  transition: background-color 0.3s;
+}
+
+.sidebar li a:hover {
+  background-color: #979191;
+}
