--- a/src/Document/styles/Sidebar.css
+++ b/src/Document/styles/Sidebar.css
@@ -11,12 +11,15 @@
     margin-top: 140px;
     width: 15%;
     background-color: lightgray;
+
   }
 
   .sidebar h2 {
   color: #333;
   font-size: 1.5rem;
   margin: 0 0 1rem 1rem;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 5px;
 }
 
 .sidebar ul {
@@ -40,4 +43,9 @@
 
 .sidebar li a:hover {
   background-color: #979191;
+}
+
+.sidebar-title {
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 5px;
 }
