--- a/src/Document/styles/OptionMenuDocument.css
+++ b/src/Document/styles/OptionMenuDocument.css
@@ -1,20 +1,19 @@
-.sidebar {
+.option-menu {
     position: absolute;
-    top: 60px; /* wysokość DocumentNavigationBar + margines */
-    left: 0;
+    top: 63px; /* wysokość DocumentNavigationBar + margines */
+    right: 0;
     bottom: 0;
-    width: 200px;
     height: calc(100% - 60px); /* wysokość widoku przeglądarki minus wysokość DocumentNavigationBar i margines */
     overflow: auto;
-    border: 1px solid black;
     padding: 10px;
     margin-top: 140px;
     width: 15%;
-    background-color: lightgray;
+    background-color: #fff;
+    border-left: 1px solid black;
 
   }
 
-  .sidebar h2 {
+  .option-menu h2 {
   color: #333;
   font-size: 1.5rem;
   margin: 0 0 1rem 1rem;
@@ -22,18 +21,18 @@
   padding-bottom: 5px;
 }
 
-.sidebar ul {
+.option-menu ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.sidebar li {
+.option-menu li {
   margin: 0;
   padding: 0;
 }
 
-.sidebar li a {
+.option-menu li a {
   color: #333;
   display: block;
   padding: 0.5rem 1rem;
@@ -41,11 +40,15 @@
   transition: background-color 0.3s;
 }
 
-.sidebar li a:hover {
+.option-menu li a:hover {
   background-color: #979191;
 }
 
-.sidebar-title {
+.option-menu-title {
   border-bottom: 1px solid #ccc;
   padding-bottom: 5px;
 }
+
+.nav-icon {
+    margin-left: 5px; /* Dodaj odstęp między tekstem a ikoną */
+  }
