update eternal document

--- a/src/Document/styles/ShowDocument.css
+++ b/src/Document/styles/ShowDocument.css
@@ -1,6 +1,6 @@
 .show-document-content{
     width: 70%;
     background-color: whitesmoke;
-    margin-left: 300px;
-    margin-top: 10px;
+    margin-left: 15%;
+    margin-top: 6px;
     }
